--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         const day = document.getElementById("day");
         const month = document.getElementById("month");
         const year = document.getElementById("year");
-        const WeekDays = ["Saturday","Sunday","Monday","Tuesday","Wednesday","Thrusday","Friday"];
+        const WeekDays = ["Sunday","Monday","Tuesday","Wednesday","Thrusday","Friday","Saturday"];
         const AllMonth = ["Jan","Feb","Mar","Apr","May","June","July","Aug","Sep","Oct","Nov","Dec"];
             const today = new Date();
 
